--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,4 +7,5 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - name: Cypress run
-              uses: cypress-io/github-action@v2
+              # uses: cypress-io/github-action@v2
+              run: npx cypress run --spec "cypress/e2e/**/*"
